# gentoo-historical

./: README-excluded-files
admin/cvs.gentoo.org/: ChangeLog
admin/cvs.gentoo.org/conf/: apache.conf  checkxml.pl  vhost.conf
admin/www.gentoo.org/: README
admin/www.gentoo.org/conf/: apache.conf  redir.conf  vhost.conf
admin/www.gentoo.org/scripts/: cvs-page.sh  cvs-repo-update.sh  cvs2cl.pl  cvsupdate.sh  distrowatch.sh  doc-tarball.sh  icon2xml.pl  icons2xml.pl  icons2xml_v2.pl  image-upload.sh  mirrors.sh  news-index.sh  nightly.sh  pidlock  pkglist.py  pkgs.py  portage-tarball.sh  rsync-weblogs.sh  site-archive.sh  use-index.py
admin/www.gentoo.org/viewcvs/: cvsgraph.conf  viewcvs.conf
misc/: dev_coords.txt  herds.old.xml  herds.xml
misc/rfc/: secure.rfc  skel.rfc
src/catalyst/: AUTHORS  ChangeLog  ChangeLog.old  README  catalyst
src/catalyst/arch/: alpha.py  amd64.py  arm.py  hppa.py  ia64.py  mips.py  ppc.py  ppc64.py  s390.py  sh.py  sparc.py  sparc64.py  x86.py
src/catalyst/examples/: gamecd.conf.example  isolinux-2.08-cdtar.tar.bz2  livecd-stage2_template.spec
src/catalyst/files/: catalyst.conf
src/catalyst/modules/: builder.py  catalyst_lock.py  catalyst_support.py  embedded_target.py  generic_stage_target.py  generic_target.py  grp_target.py  livecd_stage1_target.py  livecd_stage2_target.py  netboot.py  netboot2_target.py  netboot_target.py  snapshot_target.py  stage1_target.py  stage2_target.py  stage3_target.py  stage4_target.py  tinderbox_target.py
src/embedded/baselayout-lite/: ChangeLog
src/fortune-gentoo-dev/: .gitignore  ChangeLog  Makefile  README  join.pl  rot13.pl  split.pl
src/fortune-gentoo-dev/fortunes/: 00000-20030809_00000  00003-20030809_00003  00004-20030809_00004  00005-20030809_00005  00006-20030809_00006  00007-20030809_00007  00008-20030809_00008  00009-20030809_00009  00011-20030809_00011  00013-20030809_00013  00014-20030809_00014  00015-20030809_00015  00016-20030809_00016  00018-20030809_00018  00019-20030809_00019  00020-20030809_00020  00021-20030809_00021  00022-20030809_00022  00023-20030809_00023  00024-20030809_00024  00025-20030809_00025  00027-20030809_00027  00028-20030809_00028  00029-20030809_00029  00030-20030809_00030  00031-20030809_00031  00032-20030809_00032  00034-20030809_00034  00035-20030809_00035  00036-20030809_00036  00037-20030809_00037  00038-20030809_00038  00039-20030809_00039  00040-20030809_00040  00041-20030809_00041  00042-20030809_00042  00043-20030809_00043  00044-20030809_00044  00045-20030809_00045  00047-20030903_00046  (+409 more)
src/fortune-gentoo-dev/fortunes-offensive/: 00017-20030809_00017  00026-20030809_00026  00423-20070119_00001  00432-20070506_00001  00433-20070521_00001  00434-20070525_00001  00435-20070703_00001  00438-20080303_00001  00440-20080429_00002  00445-20080522_00001  00448-20080605_00001  00449-20080607_00001  00450-20080613_00001  00452-20080621_00002  00458-20080630_00003
src/gcloop/: CHANGELOG  Makefile  README  README.kernel  TODO  compressed_loop.h  compressloop.c  compressloop64_ucl.c  compressloop_ucl.c  create_compressed_ucl_fs.c  extract_compressed_ucl_fs.c  gcloop-2.6-mm-20040118.patch  gcloop-2.6.x.patch
src/gcloop/man/: compress_gcloop.1  compress_gcloop_ucl.1  (+4 more)
src/genkernel/: ChangeLog  genkernel  livecdrc
src/genkernel_bradmssw/: README
src/glsr/: README
src/gwn/: .gitignore  email2.xsl  get_glsas.py  get_packages_url.py  get_portage_stats.py  glsa2gwn.py  gmn2txt.xsl  gmn_bugzie.py  gmn_bugzie_aggregate.py  gwn2txt.xsl  gwn_adds_removes.py  gwn_adds_removes.sh  gwn_bugzilla_report_en.py  gwn_to_text.py  gwn_to_text.sh  gwnproc.py  past_interviews.txt  print-dev-stats.py
src/hwdata/: Cards  ChangeLog  MonitorsDB  blacklist  check-cards  pcitable
src/initrd_linuxrc/: linuxrc.new
src/installer/: AUTHORS  ChangeLog  NEWS  README  TODO
src/lcdsplash/: CREDITS  README  lcdsplash.conf  splash-functions.sh  tarball.sh
src/livecd/: GRP_apps  README  README.old  livecd-ng  test
src/livecd-tools/: autoconfig  bashlogin  livecd-functions.sh  net-setup  opengl-update  opengl-update-livecd  openglify  spind  spind.init  x-setup  x-setup.init
src/netboot-base/: tarball.sh
src/relnotes/: README  genrelnotes.sh  relnotes.xml
src/snippets/: README
src/toolchain/gcc-config/: .gitignore  AUTHORS  Makefile.am  README  TODO  acinclude.m4  autogen.sh  configure.in  hash.c  hash.h  install_conf.c  install_conf.h  profile.c  profile.h  selection_conf.c  selection_conf.h  wrapper.c
src/toolchain/gcc-config/conf/: Makefile.am  README  selection.conf  x86_64-pc-linux-gnu-3.4.4.conf
src/toolchain/gcc-config/src/: Makefile.am
src/toolchain/gcc-config/src/compiler-wrapper/: .gitignore  Makefile.am  compiler-wrapper.c
src/toolchain/gcc-config/src/gcc-wrapper/: .gitignore  Makefile.am  gcc-wrapper.c
src/toolchain/gcc-config/src/libcommon/: Makefile.am  hash.c  hash.h  install_conf.c  install_conf.h  parse_conf.c  parse_conf.h  profile.c  profile.h  selection_conf.c  selection_conf.h  sort.c  sort.h  strndup.c  strndup.h  strnlen.c  strnlen.h
src/toolchain/gcc-config/src/profile-manager/: .gitignore  Makefile.am  README  gcc-config.in  profile-manager.c
src/virt-mail-admin/: virt-mail-admin-0.0.1-pre1-alpha.tar.bz2
src/webapp-config/: AUTHORS.txt  README.txt  TODO.txt
src/wine/: tarballs.sh
users/absinthe/: contact_info  jakarta-commons.eclass  keep  projects
users/andrd/: evoguide.xml  genlist.pl
users/antarus/: block_sync
users/carpaski/: binary_hosts_d1.txt  binary_hosts_draft.txt
users/cybersystem/: alias-groups
users/karltk/: publish
users/klasikahl/: mailmin.xml
users/mcummings/: Bugzilla.pm  Changes  MANIFEST  Makefile.PL  README
users/opfer/: ChangeLog  ebuild-mode.el
users/pvdabeel/: README
users/vladimir/: gentoo_developer_xearth_markers
users/wolf31o2/: keyword
xml/htdocs/: gmaps-key.xml  googlehostedservice.html  index.xml  index2.xml  resume.xml
xml/xml/: resume.xml
(+15822 files in other folders)
