AC_PREREQ(2.59)
AC_INIT(gcc-config, 2.0, toolchain@gentoo.org)
AM_INIT_AUTOMAKE
AC_CONFIG_HEADER([config.h])

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB
AC_ISC_POSIX
AC_PROG_INSTALL

dnl AC_ENABLE_SHARED
dnl AC_DISABLE_STATIC
dnl Next four lines is a hack to prevent libtool checking for CXX/F77
dnl m4_undefine([AC_PROG_CXX])
dnl m4_defun([AC_PROG_CXX],[])
dnl m4_undefine([AC_PROG_F77])
dnl m4_defun([AC_PROG_F77],[])
dnl AC_PROG_LIBTOOL

AC_C_INLINE

AC_ARG_WITH(eselect-mod-dir,
        AS_HELP_STRING([--with-eselect-mod-dir=DIR],[directory where we should install the eselect modules (Default: DATADIR/eselect/modules)]),
        eselectmoddir="${withval}",
        eselectmoddir="${datadir}/eselect/modules")
AC_DEFINE_DIR(ESELECT_MOD_DIR,eselectmoddir,[Directory where we install eselect modules])

AC_ARG_WITH(libexec-dir,
        AS_HELP_STRING([--with-libexec-dir=DIR],[directory where we should install the helper executables (Default: EPREFIX/libexec/gcc-config)]),
        libexecdir="${withval}",
        libexecdir="\${exec_prefix}/libexec/gcc-config")
AC_DEFINE_DIR(LIBEXEC_DIR,libexecdir,[Directory where we install helper executables])

AC_ARG_WITH(config-dir,
        AS_HELP_STRING([--with-config-dir=DIR],[directory where the global config files are located (Default: /etc/gcc-config)]),
        libexecdir="${withval}",
        libexecdir="/etc/gcc-config")
AC_DEFINE_DIR(CONFIGURATION_DIR,configdir,[Directory where the global config files are located])

AC_OUTPUT([
	Makefile
	src/Makefile
	src/gcc-wrapper/Makefile
	src/libcommon/Makefile
	src/profile-manager/Makefile
	src/profile-manager/gcc-config
])
